<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="150dp"
            android:text="@string/_5_cutting_climate_changing_carbon_emissions"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView59" />

        <TextView
            android:id="@+id/textView56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="150dp"
            android:text="@string/_3_reducing_demand_for_raw_materials"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView55" />

        <TextView
            android:id="@+id/textView54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="150dp"
            android:text="@string/_2_protecting_ecosystems_and_wildlife"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView53" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/why_should_you_recycle"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="150dp"
            android:text="@string/_1_conserving_natural_resources"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView49" />

        <TextView
            android:id="@+id/textView51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="1dp"
            android:text="@string/recycling_paper_and_wood_saves_trees_and_forests_yes_you_can_plant_new_trees_but_you_can_t_replace_virgin_rainforest_or_ancient_woodlands_once_they_re_lost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView50" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:text="@string/recycling_plastic_means_creating_less_new_plastic_which_is_definitely_a_good_thing_especially_as_it_s_usually_made_from_fossil_fuel_hydrocarbons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView51" />

        <TextView
            android:id="@+id/textView53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:text="@string/recycling_glass_reduces_the_need_to_use_new_raw_materials_like_sand_it_sounds_hard_to_believe_but_supplies_of_some_types_of_sand_are_starting_to_get_low_around_the_world"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView52" />

        <TextView
            android:id="@+id/textView55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="1dp"
            android:text="@string/recycling_reduces_the_need_to_grow_harvest_or_extract_new_raw_materials_from_the_earth_nthat_in_turn_lessens_the_harmful_disruption_and_damage_being_done_to_the_natural_world_fewer_forests_cut_down_rivers_diverted_wild_animals_harmed_or_displaced_and_less_pollution_of_water_soil_and_air_nand_of_course_if_our_plastic_waste_isn_t_safely_put_in_the_recycling_it_can_be_blown_or_washed_into_rivers_and_seas_and_end_up_hundreds_or_thousands_of_miles_away_polluting_coastlines_and_waterways_and_becoming_a_problem_for_everyone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView54" />

        <TextView
            android:id="@+id/textView57"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="1dp"
            android:text="@string/the_world_s_increasing_demand_for_new_stuff_has_led_to_more_of_the_poorest_and_most_vulnerable_people_for_example_those_living_around_forests_or_river_systems_being_displaced_from_their_homes_or_otherwise_exploited_forest_communities_can_find_themselves_evicted_as_a_result_of_the_search_for_cheap_timber_and_rivers_can_be_damned_or_polluted_by_manufacturing_waste_nit_s_far_better_to_recycle_existing_products_than_to_damage_someone_else_s_community_or_land_in_the_search_for_new_raw_materials"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView56" />

        <TextView
            android:id="@+id/textView58"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="150dp"
            android:text="@string/_4_saving_energy"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView57" />

        <TextView
            android:id="@+id/textView59"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="1dp"
            android:text="@string/making_products_from_recycled_materials_requires_less_energy_than_making_them_from_new_raw_materials_sometimes_it_s_a_huge_difference_in_energy_for_example_nproducing_new_aluminium_from_old_products_including_recycled_cans_and_foil_uses_95_less_energy_than_making_it_from_scratch_for_steel_it_s_about_a_70_energy_saving_nmaking_paper_from_pulped_recycled_paper_uses_40_less_energy_than_making_it_from_virgin_wood_fibres_the_amount_of_energy_saved_from_recycling_one_glass_bottle_could_power_an_old_100_watt_light_bulb_for_4_hours_and_a_new_low_energy_led_equivalent_for_a_lot_longer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView58" />

        <TextView
            android:id="@+id/textView62"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="1dp"
            android:text="@string/because_recycling_means_you_need_to_use_less_energy_on_sourcing_and_processing_new_raw_materials_it_produces_lower_carbon_emissions_it_also_keeps_potentially_methane_releasing_waste_out_of_landfill_sites_nreducing_carbon_dioxide_and_other_greenhouse_gases_being_emitted_into_the_atmosphere_is_vital_for_stopping_disastrous_climate_change"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView61" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>